# user-center

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: group.rs  lib.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220719_133721_create_group_table.rs  m20220719_133751_create_user_table.rs  m20220720_152913_seed_users_and_groups.rs
src/: group.rs  lib.rs  main.rs  session.rs  user.rs
user-ui/: Dockerfile  index.html  package.json
user-ui/src/: App.vue  main.js
user-ui/src/components/: LoginForm.vue
user-ui/src/utils/: request.js
user-ui/src/views/: home.vue  login.vue
util/: Cargo.toml
util/src/: lib.rs
