[package]
name = "user-center"
version = "0.1.0"
edition = "2021"
authors = ["Kingfree Ten <kingfree@toyama.moe>"]
publish = false

[dependencies]
tokio = { version = "^1.20.0", features = ["full"] }
axum = "^0.5.13"
sea-orm = { version = "^0.9.0", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
