[package]
name = "user-center"
version = "0.1.0"
edition = "2021"
authors = ["Kingfree Ten <kingfree@toyama.moe>"]
publish = false

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tokio = { version = "^1.20.0", features = ["full"] }
axum = "^0.5.13"
sea-orm = { version = "^0.9.0", features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "macros",
] }
dotenv = "^0.15.0"
anyhow = "^1.0.58"
tower = "^0.4.13"
tower-http = { version = "^0.3.4", features = ["cors"] }
serde = "^1.0.110"
serde_json = "^1.0.82"
