[package]
name = "user-center"
version = "0.1.0"
edition = "2021"
authors = ["Kingfree Ten <kingfree@toyama.moe>"]
publish = false

[workspace]
members = [".", "entity", "migration", "util"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
util = { path = "util" }

tokio = { version = "^1.20.0", features = ["full"] }
axum = "^0.5.13"
sea-orm = { version = "^0.9.0", features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "macros",
] }
sea-query = "^0.26.0"
dotenv = "^0.15.0"
anyhow = "^1.0.58"
tower = "^0.4.13"
tower-http = { version = "^0.3.4", features = ["cors"] }
serde = "^1.0.110"
serde_json = "^1.0.82"
jwt = "^0.16.0"
hmac = "0.12.1"
sha2 = "0.10.0"
lazy_static = "^1.4.0"
log = "^0.4.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
